# crib_daq_mgmt

./: .gitignore  .gitmodules  README.md  config.yaml  pyproject.toml  start.sh  stop.sh
babilib/: ip_table.yaml
babilib/src/: babilib.py  restart.py  set_EBsize.py  sta.py  sto.py
pybabilib/: .gitignore  README.md  config.yaml  init_setting.py  pyproject.toml  restart.py  set_EBsize.py  sta.py  sto.py
pybabilib/src/: restart.py  set_EBsize.py  sta.py  sto.py
pybabilib/tests/: test_config.py
ridf/: .gitignore
send_runsummary/: .gitignore  README.md  config.yaml  module_send.py  pyproject.toml  send_runsummary.py  sender.py  test_sender.py
send_runsummary/json/: start.sh
send_runsummary/src/: module_send.py  send_runsummary.py
send_runsummary/tests/: test_connection.py
