[tool.poetry]
name = "babilib"
version = "0.1.0"
description = "DAQ scripts for MPV configuration"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
sockets = "^1.0.0"
pyyaml = "^6.0.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
