[tool.poetry]
name = "send-runsummary"
version = "0.1.0"
description = "send daq summary to the google spread sheet"
authors = ["KodaiOkawa <okawa@cns.s.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^5.12.0"
pyyaml = "^6.0.1"
ruamel-yaml = "^0.18.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
