[tool.poetry]
name = "send-runsummary"
version = "0.1.0"
description = "send daq summary to the google spread sheet"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
gspread = "^6.1.2"
pyyaml = "^6.0.2"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
